fix: adjust label margin for improved spacing consistency

--- a/src/components/ui/_input.scss
+++ b/src/components/ui/_input.scss
@@ -41,7 +41,7 @@ input[type='radio'] {
 }
 
 label {
-  margin-bottom: s(3);
+  margin: s(1);
   font-weight: 600;
 }
 
